// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCode renders a code snippet 1`] = `
<code
  aria-label="aria-label"
  class="euiCode testClass1 testClass2 emotion-euiCode"
  data-code-language="text"
  data-test-subj="test subject string"
>
  var some = 'code';
console.log(some);
</code>
`;

exports[`EuiCode renders languages 1`] = `
<code
  aria-label="aria-label"
  class="euiCode testClass1 testClass2 emotion-euiCode"
  data-code-language="js"
  data-test-subj="test subject string"
>
  <span
    class="token keyword"
  >
    var
  </span>
   some 
  <span
    class="token operator"
  >
    =
  </span>
   
  <span
    class="token string"
  >
    'code'
  </span>
  <span
    class="token punctuation"
  >
    ;
  </span>
  

  <span
    class="token console class-name"
  >
    console
  </span>
  <span
    class="token punctuation"
  >
    .
  </span>
  <span
    class="token method function property-access"
  >
    log
  </span>
  <span
    class="token punctuation"
  >
    (
  </span>
  some
  <span
    class="token punctuation"
  >
    )
  </span>
  <span
    class="token punctuation"
  >
    ;
  </span>
</code>
`;

exports[`EuiCode renders transparent backgrounds 1`] = `
<code
  aria-label="aria-label"
  class="euiCode testClass1 testClass2 emotion-euiCode-transparentBackground"
  data-code-language="text"
  data-test-subj="test subject string"
>
  var some = 'code';
console.log(some);
</code>
`;
